# hffp

ch10/: Database.hs  Scans.hs  exercises.hs
ch11/: Phone.hs  Razor.hs  Vigenere.hs  exercises.hs
ch12/: exercises.hs
ch13/: Misc.hs  Vigenere.hs  exercises.hs
ch13/hangman/: hangman.cabal  stack.yaml
ch13/hangman/src/: Main.hs
ch14/: arbitrary.hs  quickcheck.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch14/wordnumber/: package.yaml  wordnumber.cabal
ch14/wordnumber/app/: Main.hs
ch14/wordnumber/src/: WordNumber.hs
ch14/wordnumber/test/: Spec.hs
ch15/: exercises.hs  validation.hs
ch15/orphan-instance/: Listy.hs  ListyInstances.hs
ch16/: exercises.hs  replace.hs  wrap.hs
ch17/: exercises.hs  list.hs  test.hs
ch17/BadMonoid/: BadMonoid.cabal  Main.hs
ch17/Exercises/: Exercises.cabal  Main.hs
ch17/Validation/: Main.hs  Validation.cabal
ch17/ZipList/: Main.hs  ZipList.cabal
ch18/: exercises.hs
ch18/BadMonad/: BadMonad.cabal  Main.hs
ch18/Exercises/: Exercises.cabal  Main.hs
ch19/: Main.hs  shawty.cabal
ch2/: funcs.hs  headcode.hs
ch20/: exercises.hs
ch21/: Main.hs  exercises.cabal
ch22/: beginning.hs  exercise.hs  exercises.hs  short-exercise.hs
ch22/shawty/: Main.hs
ch23/: exercises.hs  fizzbuzz.hs
ch23/random/: Main.hs  RandomExample.cabal
ch24/aeson/: Main.hs  marshalling.cabal
ch24/exercises/: Main.hs  exercises.cabal
ch24/fractions/: Main.hs  fractions.cabal
ch24/learn_parsers/: Main.hs  learn-parsers.cabal
ch24/try/: Main.hs  try.cabal
ch25/exercises/: Main.hs  exercises.cabal
ch3/: TopOrLocal.hs  area.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs
ch4/: cs.hs  f.hs  moodswing.hs  myAbs.hs  palindrome.hs
ch5/: addStuff.hs  arith3broken.hs  determine.hs  kessel.hs  param.hs  sing.hs  type-kwan-do.hs  typeInference1.hs
ch6/: exercises.hs  inheritance.hs  trivial.hs  typealoo.hs  typecheck.hs
ch7/: Arith2.hs  ArtfulDodgy.hs  CasePractice.hs  GuardBlocks.hs  GuardDuty.hs  VarietyPack.hs  arith4.hs  exercises.hs  grabbag.hs
ch8/: WordNumber.hs  exercises.hs
ch9/: Cipher.hs  PoemLines.hs  exercises.hs
hello_world/: sick.hs
