cabal-version:       2.4
name:                BadMonoid
version:             0.1.0.0
synopsis:            =BadMonoid
license:             NONE
license-file:        LICENSE
author:              Dmitrii Banshchikov
maintainer:          me@ubique.spb.ru

library
  exposed-modules:     Main
  build-depends:       base ^>=4.13.0.0, QuickCheck ^>=2.13.2, checkers
  default-language:    Haskell2010

executable BadMonoid
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0, QuickCheck ^>=2.13.2, checkers
  default-language:    Haskell2010
